# ContentOp

./: .gitignore  CLAUDE.md  PROJECT-PLAN.md  README.md
.kiro/specs/rankpot-full-application/: design.md  requirements.md  tasks.md
backend/: .env.example  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/tests/: conftest.py
frontend/: .env.example  .prettierignore  README.md  package-lock.json  package.json
frontend/src/: index.css
frontend/src/components/ai/: .gitkeep
frontend/src/components/auth/: .gitkeep
frontend/src/components/bookmarks/: .gitkeep
frontend/src/components/common/: .gitkeep
frontend/src/components/scheduling/: .gitkeep
frontend/src/components/search/: .gitkeep
frontend/src/components/team/: .gitkeep
frontend/src/components/tracking/: .gitkeep
frontend/src/services/: api.ts
frontend/src/stores/: .gitkeep
frontend/src/types/: index.ts
steering/: coding_pattern.md
